# enough-recipes

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  nginx.Dockerfile  nginx.conf  prod.Dockerfile  pyproject.toml  runserver.sh
core/: admin.py  es.py  forms.py  models.py  recipes.py  tests.py  views.py
core/management/commands/: clear_kafka.py  create_recipe_index.py  drop_recipe_index.py  run_recipe_consumer.py  run_recipe_producer.py
core/migrations/: 0001_initial.py
core/templates/: layout.html
core/templates/core/: index.html  search.html  search_results.html  top.html
enough_recipes/: asgi.py  settings.py  urls.py  wsgi.py
enough_recipes_theme/: apps.py
enough_recipes_theme/static_src/: package-lock.json  package.json
enough_recipes_theme/static_src/src/: styles.css
k8s/base/: 00-namespace.yaml  01-app-deployment.yaml  03-producer.yaml  04-nginx.yaml  app-deployment.yaml  app-service.yaml  consumer-deployment.yaml
k8s/helm/: install-broker.sh  install-es.sh
k8s/vultr/: certificate.yaml  clusterissuer.yaml  lb.yaml
tf/: init.tf  main.tf  terraform.tfstate  terraform.tfstate.backup  vars.tf
tf/.terraform/plugins/: selections.json
