[tool.poetry]
name = "enough_recipes"
version = "0.1.0"
description = ""
authors = ["Robert Elwell <robert.elwell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
boltons = "^21.0.0"
mwparserfromhell = "^0.6.4"
requests = "^2.27.1"
kafka-python = "^2.0.2"
elasticsearch = "^8.2.0"
dj-database-url = "^0.5.0"
mysqlclient = "^2.1.0"
beautifulsoup4 = "^4.11.1"
gunicorn = "^20.1.0"
django-tailwind = "^3.1.1"
django-browser-reload = "^1.6.0"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"
mypy = "^0.950"
types-requests = "^2.27.27"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
